src/objects/copado__Deployment_Flow__c.object
<CustomObject>
    <fields>
        <fullName>FlowStepsCount__c</fullName>
        <description>Rollup summary counting the number of deployment flow steps</description>
        <label>FlowStepsCount</label>
        <summaryForeignKey>copado__Deployment_Flow_Step__c.copado__Deployment_Flow__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IsValid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Deployment Flow valid?</description>
        <label>IsValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StepsWithBlankBranches__c</fullName>
        <description>Deployment Flow Steps with Blank Branches</description>
        <label>StepsWithBlankBranches</label>
        <summaryFilterItems>
            <field>copado__Deployment_Flow_Step__c.copado__Branch__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>copado__Deployment_Flow_Step__c.copado__Deployment_Flow__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TerminusEnvCount__c</fullName>
        <description>Count of the number of  Environments configured a Terminus in this flow.</description>
        <inlineHelpText>Deployment Flow steps must connect all Environments except a single Terminus.</inlineHelpText>
        <label>TerminusEnvCount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_Failures__c</fullName>
        <description>Contains descriptive text about any flow validation failures.  Blank if none.</description>
        <label>Validation Failures</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Branch_Management_Coordinates__c</fullName>
        <description>This field is used to store the Branch Management Step locations of each box. This field should not be added to the page layout.</description>
        <label>Branch Management Coordinates</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Disable_Validations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Equal_Branch_Environment_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enforce branch/env naming convention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Flow_Step_Coordinates__c</fullName>
        <description>This field is used to store the Deployment Flow Step locations of each box. This field should not be added to the page layout.</description>
        <label>Flow Step Coordinates</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipLabel>Deployment Flows</relationshipLabel>
        <relationshipName>Deployment_Flows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Main_Branch__c</fullName>
        <label>Main Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Manage_Branches__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;&amp;
IF($Setup.copado__Settings__c.copado__Namespace__c=&apos;none&apos;,&apos;&apos;,
  IF(isblank($Setup.copado__Settings__c.copado__Namespace__c),&apos;copado__&apos;,$Setup.copado__Settings__c.copado__Namespace__c)
)&amp;&apos;BranchManagement?id=&apos;&amp;Id, &apos;Manage Branches&apos;, &apos;_blank&apos;)</formula>
        <label>Manage Branches</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Static_Code_Analysis_Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Static Code Analysis Settings</label>
        <referenceTo>copado__Static_Code_Analysis_Settings__c</referenceTo>
        <relationshipLabel>Deployment Flows</relationshipLabel>
        <relationshipName>Deployment_Flows</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deployment Flow</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Active__c</columns>
        <columns>copado__Manage_Branches__c</columns>
        <columns>copado__Git_Repository__c</columns>
        <columns>copado__Main_Branch__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Deployment Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_use_master_as_default_branch</fullName>
        <active>true</active>
        <description>Cannot use master as default branch</description>
        <errorConditionFormula>copado__Main_Branch__c  = &apos;master&apos;</errorConditionFormula>
        <errorMessage>Cannot use master as default branch.  Production orgs should use PRODUCTION as their branch.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Blank_Branches_allowed</fullName>
        <active>true</active>
        <description>No Blank Branches allowed</description>
        <errorConditionFormula>StepsWithBlankBranches__c  &gt; 0 &amp;&amp;  copado__Active__c</errorConditionFormula>
        <errorMessage>No Blank Branches allowed - any steps with blank branches will disallow the flow to be active.</errorMessage>
    </validationRules>
</CustomObject>